test/ui/test/lowering/conflicting-attributes.stderr
error: the attribute ‘unsafe’ is not supported yet
  ┌─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:1:1
  │
1 │ @unsafe @ignore
  │ ═══════

error[E006]: multiple ‘unsafe’ attributes
  ┌─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:1:1
  │
1 │ @unsafe @ignore
  │ ═══════ duplicate or conflicting attribute
  │
  ├─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:2:1
  │
2 │ @unsafe
  │ ═══════ duplicate or conflicting attribute

error: the attribute ‘ignore’ is not supported yet
  ┌─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:1:9
  │
1 │ @unsafe @ignore
  │         ═══════

error[E006]: multiple ‘ignore’ attributes
  ┌─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:1:9
  │
1 │ @unsafe @ignore
  │         ═══════ duplicate or conflicting attribute
  │
  ├─ ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:3:1
  │
3 │ @ignore
  │ ═══════ duplicate or conflicting attribute

error: aborting due to 4 previous errors

