test/ui/test/lowering/conflicting-attributes.lushui
@unsafe @ignore
@unsafe
@ignore
coerce: Input -> Output = coerce
